refactor URL & Prepare for deploy FE

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Truong Dinh Huy - Portfolio</title>
+    <meta name="description" content="Portfolio of Truong Dinh Huy - React, Node.js, MongoDB. Xem các dự án và kỹ năng của tôi." />
+    <link rel="icon" href="/favicon.ico" />
+
+    <meta property="og:title" content="Portfolio - Truong Dinh Huy" />
+    <meta property="og:description" content="Các dự án React/Node.js, Skills, Contact." />
   </head>
   <body>
     <div id="root"></div>
